test/legs/2/dangling-escape.err
dangling-escape.legs:2:5-6: error: excess token: pattern.backslash.
| a: a\
      ~

